fixed spacing

--- a/style.scss
+++ b/style.scss
@@ -11,7 +11,7 @@ body {
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .types{
